tests/baselines/reference/parserConstructorDeclaration7.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration7.ts (2 errors) ====
    class C {
      public private constructor() { }
             ~~~~~~~
!!! error TS1028: Accessibility modifier already seen.
             ~~~~~~~
!!! error TS1089: 'private' modifier cannot appear on a constructor declaration.
    }